# Certiwipe_Android

./: Cargo.toml  README.md  capacitor.config.json  certiwipe.css  index.html  package.json  preload.js  render.js
www/: certiwipe.js  package-lock.json
